--- a/Style.css
+++ b/Style.css
@@ -42,7 +42,7 @@ nav ul a:visited {
       padding-left: 5px;
   }
   nav ul {
-font: Helvetica;
+font-family: Helvetica, sans-serif;
     color: black;
       text-decoration: none;
       padding-right: 10px;
@@ -113,7 +113,7 @@ display: none;
     display: block;
 }
 p {
-font: Helvetica;
+font-family: Helvetica, sans-serif;
 font-style: bold;
     color: black;
       text-decoration: underline;
