--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: MyHelvetica; /* Choose a name for your font */
+  src: url('Helvetica.otf'); /* Path to your font file */
+}
+
+
 
 nav ul li a:link {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -42,7 +48,7 @@ nav ul a:visited {
       padding-left: 5px;
   }
   nav ul {
-font-family: Helvetica, sans-serif;
+font-family: MyHelvetica, sans-serif;
     color: black;
       text-decoration: none;
       padding-right: 10px;
@@ -113,7 +119,7 @@ display: none;
     display: block;
 }
 p {
-font-family: Helvetica, sans-serif;
+font-family: MyHelvetica, sans-serif;
 font-style: bold;
     color: black;
       text-decoration: underline;
