--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: MyHelvetica; /* Choose a name for your font */
+  font-family: Helvetica; /* Choose a name for your font */
   src: url('Helvetica.otf'); /* Path to your font file */
 }
 
@@ -48,7 +48,7 @@ nav ul a:visited {
       padding-left: 5px;
   }
   nav ul {
-font-family: MyHelvetica, sans-serif;
+font-family: Helvetica, sans-serif;
     color: black;
       text-decoration: none;
       padding-right: 10px;
@@ -119,7 +119,7 @@ display: none;
     display: block;
 }
 p {
-font-family: MyHelvetica, sans-serif;
+font-family: Helvetica, sans-serif;
 font-style: bold;
     color: black;
       text-decoration: underline;
