Update logo and minor changes

--- a/Style.css
+++ b/Style.css
@@ -120,7 +120,7 @@ display: none;
 }
 p {
 font-family: Helvetica, sans-serif;
-font-style: bold;
+font-style: normal;
     color: black;
       text-decoration: underline;
       padding-right: 10px;
