--- a/Style.css
+++ b/Style.css
@@ -48,7 +48,7 @@ nav ul a:visited {
       padding-left: 5px;
   }
   nav ul {
-font-family: Helvetica, sans-serif;
+font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
     color: black;
       text-decoration: none;
       padding-right: 10px;
