--- a/Style.css
+++ b/Style.css
@@ -5,6 +5,7 @@
 
 body, h1, p, ul {
   font-family: Helvetica, sans-serif;
+  font-size:medium;
   color: black;
   text-decoration: none;
   padding-right: 10px;
