Js CSS fixes for responsiveness

--- a/Style.css
+++ b/Style.css
@@ -3,17 +3,23 @@
   src: url('Helvetica.otf');
 }
 
-/* Mobile first: initially hide the navigation */
-nav {
-  display: none;
+/* Mobile rule: hide the navigation */
+
+@media screen and (max-width: 1090px) {
+  /* CSS rules for screens smaller than 768px */
+  nav {
+    display: none;
+  }
+  
+  /* Show the hamburger icon on small screens */
+  #hamburger {
+    display: block;
+    cursor: pointer;
+    font-size: 2em;
+  }
 }
 
-/* Show the hamburger icon on small screens */
-#hamburger {
-  display: block;
-  cursor: pointer;
-  font-size: 2em;
-}
+
 
 /* On larger screens, hide the hamburger and show the navigation */
 @media (min-width: 1100px) {
